--- a/Client/src/view/MyBooksView.fxml
+++ b/Client/src/view/MyBooksView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="519.0" prefWidth="692.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.MyBooksViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="519.0" prefWidth="692.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controllers.MyBooksViewController">
    <children>
       <VBox prefHeight="519.0" prefWidth="692.0">
          <children>
@@ -48,7 +48,7 @@
                               <Insets top="90.0" />
                            </VBox.margin>
                         </Button>
-                        <Button maxHeight="40.0" maxWidth="120.0" mnemonicParsing="false" onAction="#searchBooks" onMouseClicked="#setBorrowed" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: rgba(148,148,148,0.75); -fx-font-weight: bold; -fx-text-fill: white; -fx-background-radius: 0;" text="Borrowed">
+                        <Button maxHeight="40.0" maxWidth="120.0" mnemonicParsing="false" onMouseClicked="#setBorrowed" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: rgba(148,148,148,0.75); -fx-font-weight: bold; -fx-text-fill: white; -fx-background-radius: 0;" text="Borrowed">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -56,7 +56,7 @@
                               <Insets top="40.0" />
                            </VBox.margin>
                         </Button>
-                        <Button maxHeight="40.0" maxWidth="120.0" mnemonicParsing="false" onAction="#searchBooks" onMouseClicked="#remove" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: rgba(148,148,148,0.75); -fx-font-weight: bold; -fx-text-fill: white; -fx-background-radius: 0;" text="Delete">
+                        <Button maxHeight="40.0" maxWidth="120.0" mnemonicParsing="false" onMouseClicked="#remove" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: rgba(148,148,148,0.75); -fx-font-weight: bold; -fx-text-fill: white; -fx-background-radius: 0;" text="Delete">
                            <font>
                               <Font size="18.0" />
                            </font>
